# wdnet-python

./: .gitignore  MANIFEST.in  Makefile  NOTES.md  README.md  pyproject.toml  setup.py  test_on_install.py
src/_wdnet/: fib.c  fib.cpp  fib.h  rewire.cpp  rewire.h  utils.cpp  utils.h
src/wdnet/: __init__.py  _fib.cpp  _fib.pyx  _hello.py  _utils.cpp  _utils.pyx  _wrapper.pyx  hello.py  rewire.py  rewire_cy.py  rewire_unweighted.py  utils_cy.pyx  wdnet_class.py
src/wdnet/rewire/: __init__.py  unw.py  unw_cy.pyx
test-ipynb/: test.ipynb
wdnet_yyl/: hello.py
